# simulotter

./: 2009.lua  CMakeLists.txt  Doxyfile  Makefile  ProjectHome.md  bullet.h  colors.cpp  colors.h  config.cpp  config.h  display.cpp  display.h  eurobot2009.cpp  eurobot2009.h  galipeur.cpp  galipeur.h  global.h  graphics.cpp  graphics.h  icon.h  init.lua  log.cpp  log.h  lua_utils.cpp  lua_utils.h  main.cpp  match.cpp  match.h  maths.cpp  maths.h  object.cpp  object.h  physics.cpp  physics.h  robot.cpp  robot.h  rules.cpp  rules.h  rules2009.cpp  rules2009.h  (+6 more)
doc/: conf.py  contents.rst  display.rst  eurobot.rst  eurobot2009.rst  eurobot2010.rst  eurobot2011.rst  eurobot2012.rst  eurobot2013.rst  maths.rst  misc.rst  physics.rst  robots.rst  start.rst
modules/: colors.lua  eurobot.lua  eurobot2009.cpp  eurobot2009.h  eurobot2009.lua  eurobot2010.cpp  eurobot2010.h  eurobot2010.lua  eurobot2011.cpp  eurobot2011.h  eurobot2012.cpp  eurobot2012.h  eurobot2013.cpp  eurobot2013.h  pathfinding.lua  vector.lua
python/: CMakeLists.txt  common.h  display.cpp  eurobot2009.cpp  eurobot2010.cpp  eurobot2011.cpp  eurobot2012.cpp  eurobot2013.cpp  galipeur.cpp  main.cpp  maths.cpp  object.cpp  physics.cpp  robot.cpp  sensors.cpp  utils.cpp
python/simulotter/: __init__.py  eurobot.py  eurobot2009.py  eurobot2010.py  eurobot2011.py  eurobot2012.py  eurobot2013.py
res/: logo.lua  logo.py  lua.xml  lua.xsl
